[package]
name = "signed"
version = "0.1.1"
edition = "2021"
description = "A library for working with signed numbers' absolute values avoiding confusion"
license = "MIT"
repository = "https://github.com/JohnTheCoolingFan/signed"
categories = ["mathematics"]
documentation = "https://docs.rs/signed"
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]

[dependencies]

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "add_sub_assign"
harness = false
